Fix some issues with random images being incorrect orientation
also adds some smooth context menu transitions, as well as moving API root to a variable for easier dev work.

--- a/tab.css
+++ b/tab.css
@@ -78,6 +78,8 @@ body.image-slide {
 
   animation-duration: 0.2s;
   animation-name: menu-fadein;
+
+  transition: top 0.1s ease-out, left 0.1s ease-out;
 }
 
 .menu > .menu-options {
